k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: wr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: rasppi516   # ⬅️ Mismo nodo para acceso local rápido
      containers:
        - name: php-app
          image: php:8.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
      volumes:
        - name: app-code
          hostPath:
            path: /srv/phpapp
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: wr
spec:
  type: NodePort
  selector:
    app: php-app
  externalIPs:
    - 10.0.0.16
    - 10.0.0.20
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
