k8s/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: wr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      nodeSelector:
        kubernetes.io/hostname: rasppi516   # ⬅️ Mismo nodo
      containers:
        - name: phpmyadmin
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: wr
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
